kafka-consumer-webui/src/main/fabric8/kafka-consumer-webui-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: enmasse
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: enmasse
        name: ${project.artifactId}
    spec:
      containers:
      - image: enmasseproject/${project.artifactId}:${project.version}
        name: ${project.artifactId}
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
        livenessProbe:
          tcpSocket:
            port: http
