kafka-consumer-webui/src/main/fabric8/kafka-consumer-webui-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: enmasse
  name: ${project.artifactId}
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: ${project.artifactId}
