kafka-consumer-webui/src/main/fabric8/kafka-consumer-webui-route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: enmasse
  name: ${project.artifactId}
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: ${project.artifactId}
